--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "vakorovin/yii2-datetimepicker": "dev-master",
-        "kartik-v/yii2-widgets": "*"
+        "kartik-v/yii2-widgets": "*",
+        "yiidoc/yii2-timeago": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
